Bug 353089 - Fix / remove ddeexec hack. r=bsmedberg