browser/components/shell/src/nsWindowsShellService.h
@@ -66,10 +66,6 @@ protected:
   void      SetRegKey(const char* aKeyName, const char* aValueName, 
                       const char* aValue, PRBool aBackup, HKEY aBackupKey,
                       PRBool aReplaceExisting, PRBool aForAllUsers);
-  DWORD     DeleteRegKey(HKEY baseKey, const char *keyName);
-
-  nsresult  RegisterDDESupport();
-  nsresult  UnregisterDDESupport();
 
 private:
   PRBool    mCheckedThisSession;
